[gd_scene load_steps=2 format=3 uid="uid://52ky4kxsxw6y"]

[ext_resource type="Script" path="res://Shared/Steam/Lobby.gd" id="1_ichpw"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ichpw")

[node name="CreateLobbyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 185.0
offset_bottom = 60.0
text = "Create Lobby"

[node name="CreateLobbyLineEdit" type="LineEdit" parent="CreateLobbyButton"]
layout_mode = 0
offset_left = 193.0
offset_top = 26.0
offset_right = 519.0
offset_bottom = 65.0
context_menu_enabled = false
clear_button_enabled = true
caret_blink = true

[node name="CreateLobbyLabel" type="Label" parent="CreateLobbyButton"]
layout_mode = 0
offset_left = 193.0
offset_right = 342.0
offset_bottom = 26.0
text = "Lobby Name"

[node name="SendMessageButton" type="Button" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 598.0
offset_right = 382.0
offset_bottom = 630.0
text = "Send Message"

[node name="LineEdit" type="LineEdit" parent="SendMessageButton"]
layout_mode = 0
offset_left = 173.0
offset_right = 882.0
offset_bottom = 33.0
placeholder_text = "Message..."
context_menu_enabled = false
clear_button_enabled = true
caret_blink = true

[node name="InviteFriendsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 84.0
offset_right = 338.0
offset_bottom = 126.0
text = "Invite Friends"

[node name="LeaveLobbyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 70.0
offset_right = 185.0
offset_bottom = 120.0
text = "Leave Lobby"

[node name="StartGameButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 955.0
offset_top = 71.0
offset_right = 1120.0
offset_bottom = 121.0
disabled = true
text = "Start Game"
metadata/_edit_use_anchors_ = true

[node name="ReadyButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 624.0
offset_top = 40.0
offset_right = 786.0
offset_bottom = 92.0
text = "Ready"

[node name="PlayersPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 132.0
offset_right = 193.0
offset_bottom = 583.0

[node name="PlayersPanelLabel" type="Label" parent="PlayersPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 65.0
offset_bottom = 34.0
text = "Players
"

[node name="HSeparator" type="HSeparator" parent="PlayersPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 28.0
offset_right = 175.0
offset_bottom = 53.0

[node name="PlayersPanelRichTextLabel" type="RichTextLabel" parent="PlayersPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 44.0
offset_right = 170.0
offset_bottom = 439.0
scroll_following = true

[node name="ChatPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 212.0
offset_top = 134.0
offset_right = 1114.0
offset_bottom = 585.0

[node name="ChatPanelLabel" type="Label" parent="ChatPanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 8.0
offset_right = 110.0
offset_bottom = 34.0
text = "Lobby Name"

[node name="HSeparator" type="HSeparator" parent="ChatPanel"]
layout_mode = 0
offset_left = 13.0
offset_top = 13.0
offset_right = 874.0
offset_bottom = 65.0

[node name="ChatPanelRichTextLabel" type="RichTextLabel" parent="ChatPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 50.0
offset_right = 888.0
offset_bottom = 442.0
scroll_following = true

[node name="SteamName" type="Label" parent="."]
layout_mode = 0
offset_left = 1007.0
offset_top = 8.0
offset_right = 1147.0
offset_bottom = 38.0

[node name="UsernameLabel" type="Label" parent="SteamName"]
layout_mode = 0
offset_left = -92.0
offset_top = 1.0
offset_right = -7.0
offset_bottom = 27.0
text = "Username:"

[connection signal="pressed" from="CreateLobbyButton" to="." method="_on_create_lobby_button_pressed"]
[connection signal="pressed" from="SendMessageButton" to="." method="_on_send_message_button_pressed"]
[connection signal="pressed" from="InviteFriendsButton" to="." method="_on_invite_friends_button_pressed"]
[connection signal="pressed" from="LeaveLobbyButton" to="." method="_on_leave_lobby_button_pressed"]
[connection signal="pressed" from="StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="ReadyButton" to="." method="_on_ready_button_pressed"]
